1999-08-19    <mgd@HELEN>

	* directory.m (get_class_name): Use env not jniEnv.
	Add DISABLE_ZONES macro switches for not depending on Zones
	(e.g. when you want to do debugging before initSwarm); changes
	throughout.
	(java_classname_for_typename, objcFindJavaClassName): New functions.
	([-objcFindJavaClass:]): Use objcFindJavaClassName.
	(create_class_refs): Set c_SwarmEnvironment.
	(create_refs): New function.
	(get_swarmEnvironment_field): New function.
	(swarm_directory_init): Use both.  Rewrite to expect pre-instantiated
	SwarmEnvironment variables.

	* javavars.h: Add c_SwarmEnvironment.

	* FArguments.m ([FArguments_c -_addArgument_:ofType:]): Missing
	size assignment for object->jobject switcheroo.

1999-08-18  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* javavars.h: Remove m_ClassGetClass.

	* directory.m (create_method_refs): Remove initialization of
	m_ClassGetClass.

	* directory.m (get_type_field_for_class): Disable.
	(get_primitive): Use alternate code that looks in SwarmEnvironment
	for copies of the primtive types copied from static variables in
	java/lang Classes.

1999-08-14  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Symbol.m: Remove common globals _obj_globalZone, _obj_scratchZone,
	_obj_initZone, _obj_sessionZone.

1999-08-13  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* internal.m (alignment_for_objc_type): Handle long long.

	* DefObject.m ([Object_s -lispIn:]): Use convertToType:
	instead of memcpy.

1999-08-12  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* defobj.m (lispInInteger): Don't do type check here (it's now
	in getInteger).

	* DefObject.m ([Object_s -lispIn:]): Handle long double and
	long long. 

	* DefClass.m ([CreatedClass_s -lispInCreate:]): Use getUnsigned
	instead of getInteger.

	* directory.m (swarm_directory_get_language_independent_class_name): 
	Referenced object needn't be a proxy.

1999-08-12  Alex Lancaster  <alex@santafe.edu>

	* DefObject.m: Move include of directory.h, outside HAVE_JDK,